--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
 
@@ -13,8 +12,19 @@
 </head>
 
 <body class="bg-light">
-  <div class="container">
-    sdfg
+  <div class="container-fluid">
+
+    <div class="row">
+      <div class="col-sm">
+        Одна из трёх колонок
+      </div>
+      <div class="col-sm">
+        Одна из трёх колонок
+      </div>
+      <div class="col-sm">
+        Одна из трёх колонок
+      </div>
+    </div>
   </div>
 
   <script src="/js/jquery-3.5.1.slim.min.js"></script>
