--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,30 +6,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap-treeview.min.css">
   <link rel="stylesheet" href="/css/style.css">
 
   <title>CDSS</title>
 </head>
 
 <body class="bg-light">
-  <div class="container-fluid">
-
-    <div class="row">
-      <div class="col-sm">
-        Одна из трёх колонок
+  <div class="controller">
+    <div class="controller_group">
+      <div class="disease">
+        <div id="tree"></div>
       </div>
-      <div class="col-sm">
-        Одна из трёх колонок
-      </div>
-      <div class="col-sm">
-        Одна из трёх колонок
+      <div class="properties">
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Example select</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect2">Example multiple select</label>
+            <select multiple class="form-control" id="exampleFormControlSelect2">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+        </form>
       </div>
     </div>
+    <div class="controller_button-wrapper">
+      <button type="button" class="btn btn-success btn-lg">Поиск</button>
+    </div>
   </div>
+
 
   <script src="/js/jquery-3.5.1.slim.min.js"></script>
   <script src="/js/popper.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap-treeview.min.js"></script>
   <script src="/js/main.js"></script>
 </body>
 
